gitops/application/app/overlayes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blob-svc
spec:
  selector:
    app: blob-depl
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
